--- a/package.json
+++ b/package.json
@@ -16,32 +16,34 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "@nestjs/common": "^9.1.4",
-    "@nestjs/core": "^9.1.4",
-    "@nestjs/platform-express": "^9.1.4",
-    "@nestjs/platform-ws": "^9.1.4",
-    "@nestjs/websockets": "^9.1.4",
-    "dotenv": "^16.0.3",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/platform-ws": "^10.1.3",
+    "@nestjs/websockets": "^10.1.3",
+    "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7",
-    "ws": "^8.9.0"
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.4",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.0",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
+    "@nestjs/cli": "^10.1.11",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.10",
+    "@types/uuid": "^9.0.2",
+    "@types/ws": "^8.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.1",
     "source-map-support": "^0.5.21",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6"
   }
 }
