--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,12 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
+indent_style = space
+indent_size = 2
 charset = utf-8
-end_of_line = lf
+trim_trailing_whitespace = true
 insert_final_newline = true
-
-# Indentation override for all JS under lib directory
-[src/**.{ts,tsx,js,jsx}]
-indent_style = space
-indent_size = 2
-max_line_length = 150
-
-# Matches the exact files either package.json or .travis.yml
-[*.json]
-indent_style = space
-indent_size = 2
+end_of_line = lf
+max_line_length = 140
