--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.4",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/lab": "^6.0.0-beta.18",
+    "@mui/material": "^6.1.10",
     "dayjs": "^1.11.9",
     "random-word-slugs": "^0.1.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.53.2",
+    "react-router": "^7.0.2",
     "react-use-websocket": "^4.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,9 +40,9 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
-    "typescript": "~5.6.2",
+    "typescript": "~5.7.2",
     "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.3"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
