--- a/client/package.json
+++ b/client/package.json
@@ -1,53 +1,34 @@
 {
-  "name": "planningpoker-ui",
-  "version": "0.2.0",
+  "name": "@planning-poker/client",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
-  "description": "A synchronised agile estimation client",
+  "description": "A collaborative realtime agile estimation client",
   "author": "Sam Hunt",
   "license": "UNLICENSED",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "prepare": "husky"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/lab": "^6.0.0-beta.18",
-    "@mui/material": "^6.1.10",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/lab": "^6.0.0-beta.20",
+    "@mui/material": "^6.2.1",
     "dayjs": "^1.11.9",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.53.2",
-    "react-router": "^7.0.2",
+    "react-hook-form": "^7.54.2",
+    "react-router": "^7.1.0",
     "react-use-websocket": "^4.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.4.2",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.3"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "npm run lint",
-      "prettier --write --ignore-unknown"
-    ]
+    "vite": "^6.0.5"
   }
 }
