--- a/server/package.json
+++ b/server/package.json
@@ -1,49 +1,46 @@
 {
-  "name": "planningpoker-api",
-  "version": "0.0.1",
-  "description": "A realtime synchronised planning poker server",
+  "name": "@planning-poker/server",
+  "version": "1.0.0",
+  "description": "A collaborative realtime agile estimation server",
   "author": "Sam Hunt",
   "private": true,
   "license": "UNLICENSED",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "start:prod": "NODE_ENV=production node dist/main"
   },
   "dependencies": {
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/core": "^10.1.3",
-    "@nestjs/platform-express": "^10.1.3",
-    "@nestjs/platform-ws": "^10.1.3",
-    "@nestjs/websockets": "^10.1.3",
-    "dotenv": "^16.3.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.1",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/platform-ws": "^10.4.15",
+    "@nestjs/websockets": "^10.4.15",
+    "dotenv": "^16.4.7",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
-    "uuid": "^9.0.0",
-    "ws": "^8.13.0"
+    "uuid": "^11.0.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.11",
+    "@nestjs/cli": "^10.4.9",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.10",
-    "@types/uuid": "^9.0.2",
-    "@types/ws": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.1",
+    "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.5.13",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
